--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,16 @@
   color: #61dafb;
 }
 
+.project-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.project-well{
+  width:20em;
+  margin: 10px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
